--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
+  <meta name="google-site-verification" content="ZvRpZdEF2yN2tHG50kSloinLjC01-BZTLqFHirkMXlk" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🇮🇳 ১৫ আগস্ট - স্বাধীনতা দিবস ২০২৫ | Suroj Store</title>
